--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         }
         .shahid img {
             max-width: 100%;
-            max-height: 85%;
+            max-height: 100%;
             object-fit: cover;
         }
         .shahid input[type="file"] {
@@ -242,7 +242,10 @@
 
         function downloadAsImage() {
             const container = document.querySelector('.container');
-            html2canvas(container).then((canvas) => {
+            html2canvas(container, {
+                scale: 2,
+                useCORS: true
+            }).then((canvas) => {
                 const link = document.createElement('a');
                 link.download = 'report.png';
                 link.href = canvas.toDataURL('image/png');
@@ -295,7 +298,7 @@
         </div>
 
         <div class="shahid-section">
-            <h3>الشواهد ⤵️</h3>
+            <h3>الشواهد</h3>
             <div class="shahid-grid">
                 <div id="shahid1" class="shahid" onclick="toggleFileInput('shahid1Input')">
                     <input type="file" id="shahid1Input" accept="image/*" onchange="displayImage(event, 'shahid1')">
@@ -321,9 +324,8 @@
         </div>
 
         <div class="footer">
-            <span class="programmer">برمجة المعلم صلاح خليفة الفالح</span>
-            <span class="manager">مدير 
-المدرسة حمد فريح المعيقل</span>
+            <span class="programmer">برمجة: المعلم صلاح خليفة الفالح</span>
+            <span class="manager">مدير المدرسة: حمد فريح المعيقل</span>
         </div>
     </div>
 </body>
