--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تقرير</title>
+    <title>معد التقارير</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,10 +23,11 @@
             background: linear-gradient(to bottom, #ffffff, #e6f7ff);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             display: grid;
-            grid-template-columns: 2fr 3fr;
+            grid-template-columns: repeat(2, 1fr);
             gap: 15px;
             padding: 15px;
         }
+
         .header {
             grid-column: span 2;
             background: linear-gradient(to right, #103d5e, #46b39d);
@@ -39,11 +40,13 @@
             border-radius: 20px;
             text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
         }
+
         .header .text {
             text-align: right;
             line-height: 1.5;
             font-size: 1em;
         }
+
         .header .logo {
             width: 120px;
             height: 60px;
@@ -51,21 +54,26 @@
             object-fit: cover;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
+
         .fields {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
+            grid-column: span 2;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 15px;
         }
+
         .field {
             display: flex;
             flex-direction: column;
         }
+
         .field label {
             font-weight: bold;
             margin-bottom: 5px;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
             color: #103d5e;
         }
+
         .field input, .field textarea {
             width: 100%;
             padding: 6px;
@@ -76,19 +84,25 @@
             box-sizing: border-box;
             box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+
         .field input:focus, .field textarea:focus {
             border-color: #103d5e;
             box-shadow: 0 0 5px rgba(16, 61, 94, 0.5);
             outline: none;
         }
+
         .field textarea {
             resize: none;
+            grid-column: span 2;
         }
+
         .shahid-section {
+            grid-column: span 2;
             display: flex;
             flex-direction: column;
             gap: 10px;
         }
+
         .shahid-section h3 {
             text-align: center;
             font-size: 1.2em;
@@ -96,11 +110,13 @@
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
             margin-bottom: 10px;
         }
+
         .shahid-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 15px;
         }
+
         .shahid {
             border: 1px solid #46b39d;
             border-radius: 5px;
@@ -116,6 +132,7 @@
             position: relative;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
         }
+
         .shahid img {
             max-width: 90%;
             max-height: 90%;
@@ -123,14 +140,17 @@
             object-fit: cover;
             margin: auto;
         }
+
         .shahid input[type="file"] {
             display: none;
         }
+
         .buttons {
             grid-column: span 2;
             text-align: center;
             margin: 20px 0;
         }
+
         .buttons button {
             padding: 10px 20px;
             font-size: 1em;
@@ -141,13 +161,16 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
         }
+
         .buttons button.download {
             background-color: #28a745;
             color: white;
         }
+
         .buttons button.download:hover {
             background-color: #218838;
         }
+
         .footer {
             grid-column: span 2;
             font-size: 0.9em;
@@ -159,41 +182,51 @@
             justify-content: space-between;
             padding: 10px;
         }
+
         .footer .programmer, .footer .manager {
             font-size: 0.85em;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
         }
+
         .footer .programmer {
             margin-right: 20px;
             align-self: flex-end;
         }
+
         .footer .manager {
             margin-left: 20px;
             align-self: flex-end;
         }
+
         @media (max-width: 600px) {
             .container {
                 grid-template-columns: 1fr;
             }
+
             .header {
                 font-size: 0.9em;
                 flex-direction: column;
                 align-items: flex-start;
             }
+
             .header .logo {
                 align-self: flex-end;
                 margin-top: 10px;
             }
+
             .field input, .field textarea {
                 font-size: 0.75em;
             }
+
             .shahid {
                 height: 120px;
             }
+
             .footer {
                 flex-direction: column;
                 align-items: center;
             }
+
             .footer .programmer, .footer .manager {
                 margin: 5px 0;
             }
@@ -232,14 +265,27 @@
 </head>
 <body>
     <div class="container">
-     <div class="header">
+<div class="header">
     <div class="text">
         وزارة التربية والتعليم<br>
         الإدارة العامة للتعليم<br>
-        مكتب التعليم بمنطقة <input type="text" placeholder="اسم المنطقة" class="header-input">
+        مكتب التعليم بمنطقة 
+        <input 
+            type="text" 
+            id="regionInput" 
+            placeholder="أدخل منطقتك هنا" 
+            oninput="updateRegion()" 
+            style="border: none; border-bottom: 1px solid #fff; background: transparent; color: #fff; outline: none; font-size: 1em; width: 150px; text-align: center;">
     </div>
     <img src="logo.png" alt="شعار وزارة التعليم" class="logo">
 </div>
+
+<script>
+    function updateRegion() {
+        const regionInput = document.getElementById('regionInput');
+        regionInput.placeholder = regionInput.value || 'أدخل منطقتك هنا';
+    }
+</script>
 
         <div class="fields">
             <div class="field">
@@ -248,8 +294,18 @@
             </div>
 
             <div class="field">
+                <label for="manager">مدير المدرسة:</label>
+                <input type="text" id="manager" placeholder="اسم مدير المدرسة">
+            </div>
+
+            <div class="field">
                 <label for="location">مكان التنفيذ:</label>
                 <input type="text" id="location" placeholder="مكان التنفيذ">
+            </div>
+
+            <div class="field">
+                <label for="objectives">الأهداف:</label>
+                <textarea id="objectives" rows="4" placeholder="اكتب الأهداف هنا..."></textarea>
             </div>
 
             <div class="field">
@@ -260,16 +316,6 @@
             <div class="field">
                 <label for="date">تاريخ التنفيذ:</label>
                 <input type="date" id="date">
-            </div>
-
-            <div class="field">
-                <label for="manager">مدير المدرسة:</label>
-                <input type="text" id="manager" placeholder="اسم مدير المدرسة">
-            </div>
-
-            <div class="field">
-                <label for="objectives">الأهداف:</label>
-                <textarea id="objectives" rows="4" placeholder="اكتب الأهداف هنا..."></textarea>
             </div>
         </div>
 
