--- a/index.html
+++ b/index.html
@@ -251,20 +251,24 @@
                 reader.readAsDataURL(file);
             }
         }
-
-      function downloadAsImage() {
+function downloadAsImage() {
     const container = document.querySelector('.container');
-    
-    // تعديل حجم النص قبل الالتقاط
-    container.style.fontSize = '0.9em';
 
-   html2canvas(container).then((canvas) => {
+    // تطبيق تعديلات على الحاوية لتصغير النصوص
+    container.style.transform = 'scale(0.8)';
+    container.style.transformOrigin = 'top left';
+    container.style.width = '125%'; // لتعويض التصغير
+    container.style.fontSize = '14px'; // تقليل حجم النصوص
+
+    html2canvas(container, { scale: 2 }).then((canvas) => {
         const link = document.createElement('a');
         link.download = 'report.png';
         link.href = canvas.toDataURL('image/png');
         link.click();
-        
-        // إعادة حجم النص إلى الوضع الطبيعي
+
+        // إعادة الحاوية إلى وضعها الطبيعي
+        container.style.transform = '';
+        container.style.width = '';
         container.style.fontSize = '';
     });
 }
