--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         }
 
         .field label {
-            font-weight: bold;
+            font-weight: normal;
             margin-bottom: 5px;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
             color: #103d5e;
@@ -231,6 +231,7 @@
                 margin: 5px 0;
             }
         }
+
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script>
@@ -244,7 +245,7 @@
             if (file) {
                 const reader = new FileReader();
                 reader.onload = function (e) {
-                    const img = document.querySelector(`#${id} img`);
+                    const img = document.querySelector(#${id} img);
                     img.src = e.target.result;
                     img.parentElement.classList.add('active');
                 };
