--- a/index.html
+++ b/index.html
@@ -74,16 +74,18 @@
             color: #103d5e;
         }
 
-        .field input, .field textarea {
-            width: 100%;
-            padding: 6px;
-            border: 1px solid #46b39d;
-            border-radius: 5px;
-            font-size: 0.85em;
-            transition: border-color 0.3s, box-shadow 0.3s;
-            box-sizing: border-box;
-            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
+   .field input, .field textarea {
+    width: 100%;
+    padding: 6px;
+    border: 1px solid #46b39d;
+    border-radius: 5px;
+    font-size: 0.65em;
+    font-weight: normal; /* الخط الافتراضي */
+    transition: border-color 0.3s,
+    box-sizing: border-box;
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 
         .field input:focus, .field textarea:focus {
             border-color: #103d5e;
