--- a/index.html
+++ b/index.html
@@ -68,22 +68,23 @@
         }
 
         .field label {
-            font-weight: normal;
+            font-weight: small;
             margin-bottom: 5px;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
             color: #103d5e;
         }
-
-   .field input, .field textarea {
+.field input, .field textarea {
     width: 100%;
     padding: 6px;
     border: 1px solid #46b39d;
     border-radius: 5px;
-    font-size: 0.65em;
+    font-size: 0.85em;
     font-weight: normal; /* الخط الافتراضي */
-    transition: border-color 0.3s,
+    transition: border-color 0.3s, box-shadow 0.3s;
     box-sizing: border-box;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 }
 
 
