--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     border: 1px solid #46b39d;
     border-radius: 5px;
     font-size: 0.85em;
-    font-weight: normal; /* الخط الافتراضي */
+    font-weight: small;
     transition: border-color 0.3s, box-shadow 0.3s;
     box-sizing: border-box;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
