--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تقرير</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            background: linear-gradient(to bottom, #e6f7ff, #cceeff);
-        }
-
+body {
+    font-family: Arial, sans-serif; /* أضف خطًا يدعم العربية إذا لزم الأمر */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background: linear-gradient(to bottom, #e6f7ff, #cceeff);
+}
         .container {
             width: 90%;
             max-width: 1200px;
@@ -74,12 +73,13 @@
             color: #103d5e;
         }
 .field input, .field textarea {
+    font-family: Arial, sans-serif; /* نفس الخط للجميع */
+    font-weight: normal; /* لإزالة العريض */
     width: 100%;
     padding: 6px;
     border: 1px solid #46b39d;
     border-radius: 5px;
     font-size: 0.85em;
-    font-weight: small;
     transition: border-color 0.3s, box-shadow 0.3s;
     box-sizing: border-box;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
