--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+
+
+
+
+
+أنت قلت:
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -12,6 +18,7 @@ body {
     box-sizing: border-box;
     background: linear-gradient(to bottom, #e6f7ff, #cceeff);
 }
+
         .container {
             width: 90%;
             max-width: 1200px;
@@ -67,11 +74,13 @@ body {
         }
 
         .field label {
-            font-weight: small;
+            font-weight: normal;
             margin-bottom: 5px;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
             color: #103d5e;
         }
+
+
 .field input, .field textarea {
     font-family: Arial, sans-serif; /* نفس الخط للجميع */
     font-weight: normal; /* لإزالة العريض */
@@ -84,9 +93,6 @@ body {
     box-sizing: border-box;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-
-}
-
 
         .field input:focus, .field textarea:focus {
             border-color: #103d5e;
