--- a/index.html
+++ b/index.html
@@ -75,19 +75,18 @@ body {
         }
 
 .field input, .field textarea {
-    font-family: Arial, sans-serif; /* خط موحد يدعم النصوص العربية والإنجليزية */
-    font-weight: normal; /* إزالة العريض */
+    font-family: Arial, sans-serif;
+    font-weight: normal;
     width: 100%;
     padding: 6px;
     border: 1px solid #46b39d;
     border-radius: 5px;
     font-size: 0.85em;
     box-sizing: border-box;
-    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
-    overflow: visible; /* لضمان ظهور النصوص بشكل كامل */
-    white-space: nowrap; /* منع كسر النصوص الطويلة */
-    text-align: center; /* ضمان التوسيط */
+    text-align: center; /* محاذاة النص للوسط */
+    overflow: hidden;
 }
+
 
         .field input:focus, .field textarea:focus {
             border-color: #103d5e;
@@ -260,31 +259,33 @@ body {
                 reader.readAsDataURL(file);
             }
         }
-
-    function downloadAsImage() {
+function downloadAsImage() {
     const container = document.querySelector('.container');
     if (!container) {
         alert('العنصر غير موجود');
         return;
     }
 
-    const originalStyles = container.style.cssText;
-
-    // ضبط التنسيقات
-    container.style.width = '800px';
-    container.style.fontSize = '14px';
-    container.style.lineHeight = '1.5';
-    container.style.transform = 'scale(1)';
-    container.style.transformOrigin = 'top left';
-
-    // معالجة النصوص داخل الحقول
+    // نسخ النصوص من الحقول وإضافتها كعناصر نصوص داخل التقرير
     const inputs = container.querySelectorAll('input, textarea');
     inputs.forEach(input => {
-        input.style.overflow = 'visible';
-        input.style.whiteSpace = 'nowrap';
-        input.style.textAlign = 'center'; // ضمان التوسيط
+        const textSpan = document.createElement('span');
+        textSpan.style.position = 'absolute';
+        textSpan.style.left = input.getBoundingClientRect().left + 'px';
+        textSpan.style.top = input.getBoundingClientRect().top + 'px';
+        textSpan.style.width = input.offsetWidth + 'px';
+        textSpan.style.height = input.offsetHeight + 'px';
+        textSpan.style.fontSize = window.getComputedStyle(input).fontSize;
+        textSpan.style.textAlign = window.getComputedStyle(input).textAlign;
+        textSpan.style.lineHeight = window.getComputedStyle(input).lineHeight;
+        textSpan.style.color = '#000';
+        textSpan.textContent = input.value; // نسخ النص المكتوب في الحقل
+        textSpan.style.whiteSpace = 'nowrap';
+        textSpan.style.overflow = 'hidden';
+        container.appendChild(textSpan);
     });
 
+    // تحويل التقرير إلى صورة باستخدام html2canvas
     html2canvas(container, {
         scale: 3, // تحسين الدقة
         useCORS: true,
@@ -295,8 +296,9 @@ body {
         link.href = canvas.toDataURL('image/png');
         link.click();
 
-        // إعادة التنسيقات الأصلية
-        container.style.cssText = originalStyles;
+        // إزالة النصوص المضافة بعد الانتهاء
+        const addedSpans = container.querySelectorAll('span');
+        addedSpans.forEach(span => span.remove());
     }).catch((error) => {
         console.error('خطأ أثناء إنشاء الصورة:', error);
     });
