--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@ body {
     border-radius: 5px;
     font-size: 0.85em;
     box-sizing: border-box;
-    text-align: center; /* محاذاة النص للوسط */
-    overflow: hidden;
+    text-align: center; /* توسيط النصوص */
+    overflow: hidden; /* منع التجاوز */
 }
+
 
 
         .field input:focus, .field textarea:focus {
@@ -266,24 +267,30 @@ function downloadAsImage() {
         return;
     }
 
-    // نسخ النصوص من الحقول وإضافتها كعناصر نصوص داخل التقرير
+    // نسخ النصوص من الحقول إلى عناصر نصية
     const inputs = container.querySelectorAll('input, textarea');
     inputs.forEach(input => {
         const textSpan = document.createElement('span');
         textSpan.style.position = 'absolute';
-        textSpan.style.left = input.getBoundingClientRect().left + 'px';
-        textSpan.style.top = input.getBoundingClientRect().top + 'px';
-        textSpan.style.width = input.offsetWidth + 'px';
-        textSpan.style.height = input.offsetHeight + 'px';
+        textSpan.style.left = `${input.offsetLeft}px`;
+        textSpan.style.top = `${input.offsetTop}px`;
+        textSpan.style.width = `${input.offsetWidth}px`;
+        textSpan.style.height = `${input.offsetHeight}px`;
         textSpan.style.fontSize = window.getComputedStyle(input).fontSize;
-        textSpan.style.textAlign = window.getComputedStyle(input).textAlign;
+        textSpan.style.fontFamily = window.getComputedStyle(input).fontFamily;
         textSpan.style.lineHeight = window.getComputedStyle(input).lineHeight;
+        textSpan.style.textAlign = window.getComputedStyle(input).textAlign;
         textSpan.style.color = '#000';
-        textSpan.textContent = input.value; // نسخ النص المكتوب في الحقل
-        textSpan.style.whiteSpace = 'nowrap';
-        textSpan.style.overflow = 'hidden';
+        textSpan.style.display = 'flex';
+        textSpan.style.alignItems = 'center';
+        textSpan.style.justifyContent = 'center';
+        textSpan.textContent = input.value; // نص الحقل
+        textSpan.className = 'temp-span'; // لتحديد العناصر المؤقتة لاحقًا
         container.appendChild(textSpan);
     });
+
+    // إخفاء الحقول النصية أثناء التحويل
+    inputs.forEach(input => input.style.visibility = 'hidden');
 
     // تحويل التقرير إلى صورة باستخدام html2canvas
     html2canvas(container, {
@@ -296,9 +303,10 @@ function downloadAsImage() {
         link.href = canvas.toDataURL('image/png');
         link.click();
 
-        // إزالة النصوص المضافة بعد الانتهاء
-        const addedSpans = container.querySelectorAll('span');
-        addedSpans.forEach(span => span.remove());
+        // إعادة الحقول والنصوص إلى وضعها الطبيعي
+        inputs.forEach(input => input.style.visibility = 'visible');
+        const tempSpans = container.querySelectorAll('.temp-span');
+        tempSpans.forEach(span => span.remove());
     }).catch((error) => {
         console.error('خطأ أثناء إنشاء الصورة:', error);
     });
