--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body {
     border-radius: 5px;
     font-size: 0.85em;
     box-sizing: border-box;
-    text-align: center; /*  محاذاة النصوص إلى اليمين  */
+    text-align: right; /*  محاذاة النصوص إلى اليمين  */
     overflow: hidden; /* منع التجاوز */
 }
 
