--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@ body {
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
             color: #103d5e;
         }
-
 .field input, .field textarea {
     font-family: Arial, sans-serif;
     font-weight: normal;
@@ -87,6 +86,8 @@ body {
     direction: rtl; /* لضمان اتجاه النصوص العربية */
     overflow: hidden;
     white-space: nowrap;
+}
+
 }
 
 
@@ -282,13 +283,15 @@ function downloadAsImage() {
         textSpan.style.fontSize = window.getComputedStyle(input).fontSize;
         textSpan.style.fontFamily = window.getComputedStyle(input).fontFamily;
         textSpan.style.lineHeight = window.getComputedStyle(input).lineHeight;
-        textSpan.style.textAlign = 'right'; // إجبار النصوص على المحاذاة لليمين
-        textSpan.style.direction = 'rtl'; // لضمان عرض النصوص العربية بشكل صحيح
         textSpan.style.color = '#000';
+        textSpan.style.textAlign = 'right'; // إجبار النصوص على محاذاة اليمين
+        textSpan.style.direction = 'rtl'; // لضمان اتجاه النصوص العربية
+        textSpan.style.whiteSpace = 'pre-wrap'; // للسماح بالنصوص الطويلة بالظهور على عدة أسطر
+        textSpan.style.wordWrap = 'break-word'; // منع تجاوز النصوص حدود الحقل
         textSpan.style.display = 'flex';
         textSpan.style.alignItems = 'center';
-        textSpan.style.justifyContent = 'flex-end'; // لضمان أن النص يظهر في اليمين
-        textSpan.textContent = input.value; // نص الحقل
+        textSpan.style.justifyContent = 'flex-start'; // لضمان أن النص يظهر في اليمين
+        textSpan.textContent = input.value; // نسخ النص المكتوب في الحقل
         textSpan.className = 'temp-span'; // لتحديد العناصر المؤقتة لاحقًا
         container.appendChild(textSpan);
     });
@@ -315,6 +318,7 @@ function downloadAsImage() {
         console.error('خطأ أثناء إنشاء الصورة:', error);
     });
 }
+
 
         function updateRegion() {
             const regionInput = document.getElementById('regionInput');
