--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تقرير</title>
 
-/* استيراد الخط العربي من Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400&display=swap');
 
-/* تطبيق الخط الجديد */
 body, .field input, .field textarea {
-    font-family: 'Noto Sans Arabic', Arial, sans-serif; /* خط يدعم النصوص العربية */
+    font-family: 'Noto Sans Arabic', Arial, sans-serif; /* خط يدعم العربية */
     font-weight: normal;
     text-align: right; /* محاذاة النصوص لليمين */
-    direction: rtl; /* اتجاه النصوص العربية */
+    direction: rtl; /* لضمان اتجاه النصوص العربية */
 }
+
 
 
         
