--- a/index.html
+++ b/index.html
@@ -4,18 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تقرير</title>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تقرير</title>
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400&display=swap');
+    <style>
+        /* استيراد الخط العربي من Google Fonts */
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400&display=swap');
 
-body, .field input, .field textarea {
-    font-family: 'Noto Sans Arabic', Arial, sans-serif; /* خط يدعم العربية */
-    font-weight: normal;
-    text-align: right; /* محاذاة النصوص لليمين */
-    direction: rtl; /* لضمان اتجاه النصوص العربية */
-}
-
-
-
+        /* تطبيق الخط الجديد */
+        body, .field input, .field textarea {
+            font-family: 'Noto Sans Arabic', Arial, sans-serif; /* خط يدعم النصوص العربية */
+            font-weight: normal; /* إزالة العريض */
+            text-align: right; /* محاذاة النصوص لليمين */
+            direction: rtl; /* لضمان اتجاه النصوص العربية */
+        }
+    </style>
+</head>
+<body>
+</body>
+</html>
         
         .container {
             width: 90%;
