--- a/index.html
+++ b/index.html
@@ -4,44 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تقرير</title>
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تقرير</title>
 
+    <!-- تنسيقات CSS -->
     <style>
         /* استيراد الخط العربي من Google Fonts */
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400&display=swap');
 
-        /* تطبيق الخط الجديد */
-        body, .field input, .field textarea {
+        /* تطبيق الخطوط والتنسيقات العامة */
+        body {
             font-family: 'Noto Sans Arabic', Arial, sans-serif; /* خط يدعم النصوص العربية */
-            font-weight: normal; /* إزالة العريض */
-            text-align: right; /* محاذاة النصوص لليمين */
-            direction: rtl; /* لضمان اتجاه النصوص العربية */
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background: linear-gradient(to bottom, #e6f7ff, #cceeff);
         }
-    </style>
-</head>
-<body>
-</body>
-</html>
-        
+
         .container {
             width: 90%;
             max-width: 1200px;
             margin: 20px auto;
             border: 1px solid #99ccff;
             border-radius: 10px;
-            overflow: hidden;
-            background: linear-gradient(to bottom, #ffffff, #e6f7ff);
+            background: #ffffff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
-            padding: 15px;
+            padding: 20px;
+            text-align: center;
         }
+
+        h1 {
+            color: #103d5e;
+            font-size: 1.5em;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>مرحبًا بك في تقريرك</h1>
+        <p>هذا نص تجريبي داخل ملف HTML مدمج مع CSS.</p>
+    </div>
+</body>
+</html>
+
 
         .header {
             grid-column: span 2;
