--- a/index.html
+++ b/index.html
@@ -4,20 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تقرير</title>
-
-    <!-- تنسيقات CSS -->
     <style>
-        /* استيراد الخط العربي من Google Fonts */
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400&display=swap');
-
-        /* تطبيق الخطوط والتنسيقات العامة */
-        body {
-            font-family: 'Noto Sans Arabic', Arial, sans-serif; /* خط يدعم النصوص العربية */
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            background: linear-gradient(to bottom, #e6f7ff, #cceeff);
-        }
+body {
+    font-family: Arial, sans-serif; /* أضف خطًا يدعم العربية إذا لزم الأمر */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background: linear-gradient(to bottom, #e6f7ff, #cceeff);
+}
 
         .container {
             width: 90%;
@@ -25,26 +19,14 @@
             margin: 20px auto;
             border: 1px solid #99ccff;
             border-radius: 10px;
-            background: #ffffff;
+            overflow: hidden;
+            background: linear-gradient(to bottom, #ffffff, #e6f7ff);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            text-align: center;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 15px;
+            padding: 15px;
         }
-
-        h1 {
-            color: #103d5e;
-            font-size: 1.5em;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>مرحبًا بك في تقريرك</h1>
-        <p>هذا نص تجريبي داخل ملف HTML مدمج مع CSS.</p>
-    </div>
-</body>
-</html>
-
 
         .header {
             grid-column: span 2;
@@ -91,25 +73,20 @@
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
             color: #103d5e;
         }
+
+
 .field input, .field textarea {
-    font-family: Arial, sans-serif;
-    font-weight: normal;
+    font-family: Arial, sans-serif; /* نفس الخط للجميع */
+    font-weight: normal; /* لإزالة العريض */
     width: 100%;
     padding: 6px;
     border: 1px solid #46b39d;
     border-radius: 5px;
     font-size: 0.85em;
+    transition: border-color 0.3s, box-shadow 0.3s;
     box-sizing: border-box;
-    text-align: right; /* لضمان محاذاة النصوص لليمين داخل الحقول */
-    direction: rtl; /* لضمان اتجاه النصوص العربية */
-    overflow: hidden;
-    white-space: nowrap;
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-
-}
-
-
-
 
         .field input:focus, .field textarea:focus {
             border-color: #103d5e;
@@ -263,9 +240,7 @@
     <script>
         function toggleFileInput(id) {
             const fileInput = document.getElementById(id);
-            if (fileInput) {
-                fileInput.click();
-            }
+            fileInput.click();
         }
 
         function displayImage(event, id) {
@@ -273,53 +248,25 @@
             if (file) {
                 const reader = new FileReader();
                 reader.onload = function (e) {
-                    const img = document.querySelector(`#${id} img`);
-                    if (img) {
-                        img.src = e.target.result;
-                        img.parentElement.classList.add('active');
-                    }
+                    const img = document.querySelector(#${id} img);
+                    img.src = e.target.result;
+                    img.parentElement.classList.add('active');
                 };
                 reader.readAsDataURL(file);
             }
-        }
-function downloadAsImage() {
+        }function downloadAsImage() {
     const container = document.querySelector('.container');
-    if (!container) {
-        alert('العنصر غير موجود');
-        return;
-    }
+    const originalStyles = container.style.cssText;
 
-    // نسخ النصوص من الحقول إلى عناصر نصوص مؤقتة بمحاذاة اليمين
-    const inputs = container.querySelectorAll('input, textarea');
-    inputs.forEach(input => {
-        const textSpan = document.createElement('span');
-        textSpan.style.position = 'absolute';
-        textSpan.style.left = `${input.offsetLeft}px`;
-        textSpan.style.top = `${input.offsetTop}px`;
-        textSpan.style.width = `${input.offsetWidth}px`;
-        textSpan.style.height = `${input.offsetHeight}px`;
-        textSpan.style.fontSize = window.getComputedStyle(input).fontSize;
-        textSpan.style.fontFamily = `'Noto Sans Arabic', Arial, sans-serif`; // تطبيق الخط الجديد
-        textSpan.style.lineHeight = window.getComputedStyle(input).lineHeight;
-        textSpan.style.color = '#000';
-        textSpan.style.textAlign = 'right'; // إجبار النصوص على محاذاة اليمين
-        textSpan.style.direction = 'rtl'; // دعم النصوص العربية
-        textSpan.style.whiteSpace = 'pre-wrap'; // السماح بالنصوص الطويلة
-        textSpan.style.wordWrap = 'break-word'; // منع تجاوز النصوص
-        textSpan.style.display = 'flex';
-        textSpan.style.alignItems = 'center';
-        textSpan.style.justifyContent = 'flex-start';
-        textSpan.textContent = input.value;
-        textSpan.className = 'temp-span';
-        container.appendChild(textSpan);
-    });
+    // ضبط الحاوية لمقاسات ثابتة أثناء الالتقاط
+    container.style.width = '800px'; // عرض ثابت
+    container.style.fontSize = '14px'; // حجم نص موحد
+    container.style.lineHeight = '1.5'; // تحسين التباعد بين الأسطر
+    container.style.transform = 'scale(1)'; // إلغاء أي تحجيم سابق
+    container.style.transformOrigin = 'top left';
 
-    // إخفاء الحقول النصية أثناء التحويل
-    inputs.forEach(input => input.style.visibility = 'hidden');
-
-    // تحويل التقرير إلى صورة باستخدام html2canvas
     html2canvas(container, {
-        scale: 3, // تحسين الدقة
+        scale: 3, // رفع الدقة
         useCORS: true,
         backgroundColor: null,
     }).then((canvas) => {
@@ -328,23 +275,10 @@ function downloadAsImage() {
         link.href = canvas.toDataURL('image/png');
         link.click();
 
-        // إعادة الحقول والنصوص إلى وضعها الطبيعي
-        inputs.forEach(input => input.style.visibility = 'visible');
-        const tempSpans = container.querySelectorAll('.temp-span');
-        tempSpans.forEach(span => span.remove());
-    }).catch((error) => {
-        console.error('خطأ أثناء إنشاء الصورة:', error);
+        // إعادة الحاوية إلى التنسيق الأصلي
+        container.style.cssText = originalStyles;
     });
 }
-
-
-
-        function updateRegion() {
-            const regionInput = document.getElementById('regionInput');
-            if (regionInput) {
-                regionInput.placeholder = regionInput.value || 'أدخل منطقتك هنا';
-            }
-        }
     </script>
 </head>
 <body>
@@ -363,6 +297,13 @@ function downloadAsImage() {
     </div>
     <img src="logo.png" alt="شعار وزارة التعليم" class="logo">
 </div>
+
+<script>
+    function updateRegion() {
+        const regionInput = document.getElementById('regionInput');
+        regionInput.placeholder = regionInput.value || 'أدخل منطقتك هنا';
+    }
+</script>
 
         <div class="fields">
             <div class="field">
