--- a/index.html
+++ b/index.html
@@ -76,17 +76,18 @@ body {
 
 
 .field input, .field textarea {
-    font-family: Arial, sans-serif; /* نفس الخط للجميع */
-    font-weight: normal; /* لإزالة العريض */
+    font-family: Arial, sans-serif;
+    font-weight: normal;
     width: 100%;
     padding: 6px;
     border: 1px solid #46b39d;
     border-radius: 5px;
     font-size: 0.85em;
-    transition: border-color 0.3s, box-shadow 0.3s;
     box-sizing: border-box;
-    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center; /* توسيط النصوص */
+    overflow: hidden; /* منع التجاوز */
 }
+
 
         .field input:focus, .field textarea:focus {
             border-color: #103d5e;
@@ -261,37 +262,57 @@ body {
         }
 
         function downloadAsImage() {
-            const container = document.querySelector('.container');
-            if (!container) {
-                alert('العنصر غير موجود');
-                return;
-            }
+    const container = document.querySelector('.container');
+    if (!container) {
+        alert('العنصر غير موجود');
+        return;
+    }
 
-            const originalStyles = container.style.cssText;
+    // نسخ النصوص من الحقول إلى عناصر نصية
+    const inputs = container.querySelectorAll('input, textarea');
+    inputs.forEach(input => {
+        const textSpan = document.createElement('span');
+        textSpan.style.position = 'absolute';
+        textSpan.style.left = `${input.offsetLeft}px`;
+        textSpan.style.top = `${input.offsetTop}px`;
+        textSpan.style.width = `${input.offsetWidth}px`;
+        textSpan.style.height = `${input.offsetHeight}px`;
+        textSpan.style.fontSize = window.getComputedStyle(input).fontSize;
+        textSpan.style.fontFamily = window.getComputedStyle(input).fontFamily;
+        textSpan.style.lineHeight = window.getComputedStyle(input).lineHeight;
+        textSpan.style.textAlign = window.getComputedStyle(input).textAlign;
+        textSpan.style.color = '#000';
+        textSpan.style.display = 'flex';
+        textSpan.style.alignItems = 'center';
+        textSpan.style.justifyContent = 'center';
+        textSpan.textContent = input.value; // نص الحقل
+        textSpan.className = 'temp-span'; // لتحديد العناصر المؤقتة لاحقًا
+        container.appendChild(textSpan);
+    });
 
-            // ضبط الحاوية لمقاسات ثابتة أثناء الالتقاط
-            container.style.width = '800px';
-            container.style.fontSize = '14px';
-            container.style.lineHeight = '1.5';
-            container.style.transform = 'scale(1)';
-            container.style.transformOrigin = 'top left';
+    // إخفاء الحقول النصية أثناء التحويل
+    inputs.forEach(input => input.style.visibility = 'hidden');
 
-            html2canvas(container, {
-                scale: 3, // رفع الدقة
-                useCORS: true,
-                backgroundColor: null,
-            }).then((canvas) => {
-                const link = document.createElement('a');
-                link.download = 'report.png';
-                link.href = canvas.toDataURL('image/png');
-                link.click();
+    // تحويل التقرير إلى صورة باستخدام html2canvas
+    html2canvas(container, {
+        scale: 3, // تحسين الدقة
+        useCORS: true,
+        backgroundColor: null,
+    }).then((canvas) => {
+        const link = document.createElement('a');
+        link.download = 'report.png';
+        link.href = canvas.toDataURL('image/png');
+        link.click();
 
-                // إعادة الحاوية إلى التنسيق الأصلي
-                container.style.cssText = originalStyles;
-            }).catch((error) => {
-                console.error('خطأ أثناء إنشاء الصورة:', error);
-            });
-        }
+        // إعادة الحقول والنصوص إلى وضعها الطبيعي
+        inputs.forEach(input => input.style.visibility = 'visible');
+        const tempSpans = container.querySelectorAll('.temp-span');
+        tempSpans.forEach(span => span.remove());
+    }).catch((error) => {
+        console.error('خطأ أثناء إنشاء الصورة:', error);
+    });
+}
+
 
         function updateRegion() {
             const regionInput = document.getElementById('regionInput');
