--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@ body {
             cursor: pointer;
             position: relative;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-            overflow: hidden; /* لضمان عدم قص المحتوى */
+            overflow: hidden;
         }
 
         .shahid img {
-            max-width: 100%; /* ضمان أن الصور تتناسب مع المساحة */
-            max-height: 100%;
+            max-width: 90%; /* إعادة الشواهد لحجمها الطبيعي */
+            max-height: 90%;
             object-fit: contain; /* تكييف الصورة بدون قص */
             border-radius: 5px;
             margin: auto;
@@ -227,7 +227,7 @@ body {
             }
 
             .shahid {
-                height: auto; /* السماح للارتفاع بالتكيف مع المحتوى */
+                height: 150px; /* ضبط الارتفاع الطبيعي للشواهد */
             }
 
             .footer {
