--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ body {
     <div class="container">
 <div class="header">
     <div class="text">
-        وزارة التربية والتعليم<br>
+        وزارة التعليم<br>
         الإدارة العامة للتعليم<br>
         مكتب التعليم بمنطقة 
         <input 
